# aircraft_simulation_core

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: aircraft_simulation_core-config.cmake.in  build_info.h.in
docs/: README.md
include/public/: ADSBReceiver.h  ADSBSVReport.h  ADSBTransmitter.h  ASSAP.h  AbstractAscentController.h  AbstractDescentController.h  AbstractTrueWeatherOperator.h  AircraftCalculations.h  AircraftControl.h  AircraftControllerFactory.h  AircraftIntent.h  AircraftIntentLoader.h  AircraftSpeed.h  AircraftState.h  AlongPathDistanceCalculator.h  ArcOnEllipsoid.h  AscentController.h  Atmosphere.h  BadaUtils.h  BlendWindsVerticallyByAltitude.h  CalcWindGradControl.h  ClimbPhaseVerticalController.h  ConfigurationFileReader.h  CoreUtils.h  CustomMath.h  DMatrix.h  DVector.h  DataReader.h  DefaultLateralController.h  DirectionOfFlightCourseCalculator.h  DynamicsState.h  EarthModel.h  EllipsoidalEarthModel.h  EllipsoidalPositionEstimator.h  Environment.h  EquationsOfMotionState.h  EquationsOfMotionStateDeriv.h  EuclideanTightTurnResolver.h  EuclideanTrajectoryPredictor.h  EuclideanWaypointMonitor.h  (+78 more)
include/utility/: BoundedValue.h  CsvParser.h  CustomUnits.h  UtilityConstants.h  UtilityTemplates.h
src/: ADSBSVReport.cpp  AircraftCalculations.cpp  AircraftControl.cpp  AircraftIntent.cpp  AircraftIntentLoader.cpp  AircraftSpeed.cpp  AircraftState.cpp  AlongPathDistanceCalculator.cpp  ArcOnEllipsoid.cpp  Atmosphere.cpp  BlendWindsVerticallyByAltitude.cpp  CalcWindGradControl.cpp  ClimbPhaseVerticalController.cpp  ConfigurationFileReader.cpp  CoreUtils.cpp  CustomMath.cpp  DMatrix.cpp  DVector.cpp  DataReader.cpp  DefaultLateralController.cpp  DirectionOfFlightCourseCalculator.cpp  EarthModel.cpp  EllipsoidalEarthModel.cpp  Environment.cpp  EuclideanTrajectoryPredictor.cpp  EuclideanWaypointMonitor.cpp  FlightEnvelopeSpeedLimiter.cpp  FullWindTrueWeatherOperator.cpp  GeolibUtils.cpp  HorizontalPath.cpp  HorizontalPathTracker.cpp  HorizontalTurnPath.cpp  InvalidIndexException.cpp  KinematicDescent4DPredictor.cpp  KinematicTrajectoryPredictor.cpp  LatitudeLongitudePoint.cpp  LegacyPositionEstimator.cpp  LineOnEllipsoid.cpp  LocalTangentPlane.cpp  NullSpeedLimiter.cpp  (+30 more)
tests/: CMakeLists.txt
tests/src/: main.cpp
tests/src/Public/: earth_model_tests.cpp  geolib_tests.cpp  public.cmake  public_atmosphere_tests.cpp  public_tests.cpp  tangent_plane_tests.cpp  threedof_glider_tests.cpp  utility_tests.cpp  wind_blending_tests.cpp  windstack_tests.cpp
tests/src/utils/public/: OldCustomMathUtils.cpp  OldCustomMathUtils.h  PublicUtils.cpp  PublicUtils.h
